added event show page

--- a/app/views/events/_uploader_form.html.erb
+++ b/app/views/events/_uploader_form.html.erb
@@ -1,1 +1,10 @@
-<% unless 
+<% provide(:title, "Add Uploaders") %>
+
+
+<%= will_paginate %>
+
+<ul class"users">
+  <%= render @users %>
+</ul>
+
+<%= will_paginate %>
