passed local variables to partials and made host event button

--- a/app/views/events/_event.html.erb
+++ b/app/views/events/_event.html.erb
@@ -4,7 +4,8 @@
   <span class="timestamp">
     Created <%= time_ago_in_words(event.created_at) %> ago.
   </span>
-  <% if current_user?(event.user) %>
+  <%= event.user %>
+  <% if host? %>
     <%= link_to "delete", event, method: :delete, data: { confirm: "Are you sure you want to permanently delete this event?" }, title: event.title %>
   <% end %>
 </li>
