--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -7,8 +7,9 @@
     <section>
       <%= render 'shared/stats' %>
     </section>
-      <% if current_user?(@user) %>
-      <% end %>
+    <section>
+      <%= render 'shared/host_event' %>
+    </section>
   </aside>
   <div class="span8">
     <%= render 'follow_form' if signed_in? %>
