--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,30 +1,28 @@
-   <header class="navbar navbar-fixed-top">
-      <div class="navbar-inner">
-         <div class="container">
-           <nav>
-               <% if signed_in? %>
-               <%= link_to "#POST", root_path, id: "logo" %>
-                 <ul class="nav pull-right" data-toggle="collapse" data-target=".nav-collapse">
-                    <li><%= link_to "Users", users_path %></li>
-                    <li id="fat-menu" class="dropdown">
-                      <a href='#' class="dropdown-toggle" data-toggle="dropdown">Account</a>
-                      <ul class="dropdown-menu">
-                        <li><%= link_to "Profile", current_user %></li>
-                        <li><%= link_to "Settings", edit_user_path(current_user) %></li>
-                        <li class="divider"></li>
-                        <li>
-                          <%= link_to "Sign out", signout_path, method: "delete" %></li>
-                     </ul>
-                  </li>
-
-                 </ul>
-               <% else %>
-                 <%= link_to "#WELCOME", root_path, id: "logo" %>
-                   <ul class="nav pull-right">
-                   <li><%= link_to "Sign in", signin_path %></li>
-               <% end %>
-               </ul>
-            </nav>
-         </div>
-      </div>
-   </header>
+<header class="navbar navbar-fixed-top">
+  <div class="navbar-inner">
+    <div class="container">
+      <nav>
+        <% if signed_in? %>
+          <%= link_to "#HOME", root_path, id: "logo" %>
+          <ul class="nav pull-right" data-toggle="collapse" data-target=".nav-collapse">
+            <li><%= link_to "Users", users_path %></li>
+            <li id="fat-menu" class="dropdown">
+            <a href='#' class="dropdown-toggle" data-toggle="dropdown">Account</a>
+              <ul class="dropdown-menu">
+                <li><%= link_to "Profile", current_user %></li>
+                <li><%= link_to "Settings", edit_user_path(current_user) %></li>
+                 <li class="divider"></li>
+                 <li><%= link_to "Sign out", signout_path, method: "delete" %></li>
+              </ul>
+            </li>
+          </ul>
+        <% else %>
+          <%= link_to "#WELCOME", root_path, id: "logo" %>
+          <ul class="nav pull-right">
+            <li><%= link_to "Sign in", signin_path %></li>
+          </ul>
+        <% end %>
+      </nav>
+    </div>
+  </div>
+</header>
