--- a/app/views/pictures/_index.html.erb
+++ b/app/views/pictures/_index.html.erb
@@ -1,7 +1,5 @@
-<% provide(:title, 'Event Pictures') %>
-<h3><%= current_event.description %></h3>
-
-
-<ul class="pictures">
-</ul>
-
+<h3> current_event.pictures.count </h3>
+<br>
+<div class="hero-unit">
+display event pictures in this area
+</div>
