--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -15,7 +15,7 @@
     <section>
       Number of uploaders in this event: 
       <%= current_event.uploaders.count %>
-      <br>show a list of current_event.uploaders in this area
+      <br>Event title: <%= @event.title %>
     </section>
   </aside>
 <% if host? %>
