--- a/app/views/events/_add_uploader.html.erb
+++ b/app/views/events/_add_uploader.html.erb
@@ -1,4 +1,4 @@
 <%= form_for(current_event.invitations.build(uploader_id: user.id), remote: true) do |f| %>
   <div><%= f.hidden_field :uploader_id %></div>
-  <%= f.submit user.id, class: "btn btn-large btn-primary" %>
+  <%= f.submit "Invite", class: "btn btn-large btn-primary" %>
 <% end %>
