--- a/app/views/events/_event.html.erb
+++ b/app/views/events/_event.html.erb
@@ -5,7 +5,5 @@
     Created <%= time_ago_in_words(event.created_at) %> ago.
   </span>
   <%= event.user %>
-  <% if host? %>
-    <%= link_to "delete", event, method: :delete, data: { confirm: "Are you sure you want to permanently delete this event?" }, title: event.title %>
-  <% end %>
+    <% link_to "delete", event, method: :delete, data: { confirm: "Are you sure you want to permanently delete this event?" }, title: event.title %>
 </li>
