--- a/app/views/events/uploaders.html.erb
+++ b/app/views/events/uploaders.html.erb
@@ -1,3 +1,4 @@
+<% if current_user.admin? %>
 <% provide(:title, @event.title) %>
 <div class="row">
   <aside class="span4">
@@ -22,7 +23,11 @@
   <% unless current_event.host_id == user.id %>
     <%= gravatar_for user, size: 59 %>
     <%= link_to user.name, user %>
-      <%= render partial: 'uploader_form', :locals => { :user => user } %>
+    <% if current_user.following?(user) %>
+    | Already invited!
+    <% else %>
+    | Not invited yet.
+    <% end %>
   <% end %>
   </li>
   <% end %>
@@ -30,3 +35,6 @@
 </ul>
 </div>
 </div>
+<% else %>
+Sorry, you do not have access to this page. Please use your browser's back button to go back to the previous page.
+<% end %>
