--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -8,12 +8,11 @@
         <%= render 'shared/stats' %>
       </section>
       <section>
-        <%= render 'shared/micropost_form' %>
+        <%= render 'shared/host_event' %>
       </section>
     </aside>
     <div class="span8">
-      <h3><%= current_user.name %>'s Update Feed</h3>
-      <%= render 'shared/feed' %>
+      <h3><%= current_user.name %>'s Events</h3>
     </div>
   </div>
 
