--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,23 +1,5 @@
-<h1>Pages#about</h1>
-<p>Find me in app/views/pages/about.html.erb</p>
-<script type="text/javascript"><!--
-
-google_ad_client = "ca-pub-2518660584635301";
-
-/* Family */
-
-google_ad_slot = "1246342762";
-
-google_ad_width = 728;
-
-google_ad_height = 90;
-
-//-->
-
-</script>
-
-<script type="text/javascript"
-
-src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
-
-</script>
+<h1>About this website:</h1>
+<div class="hero-unit">
+This website lets you share your photos with other people who attended the camp.
+After you sign up, request to join the picture collection, and start sharing!
+</div>
