--- a/app/views/shared/_picture_upload.html.erb
+++ b/app/views/shared/_picture_upload.html.erb
@@ -1,5 +1,7 @@
 <%= form_for @picture, :html => {:multipart => true} do |f| %>
   <%= render 'shared/error_messages', object: f.object %>
+    <%= f.hidden_field :event_id %>
+    <%= f.hidden_field :user_id %>
   <p>
     <%= f.file_field :image %>
   </p>
