--- a/app/views/shared/_stats.html.erb
+++ b/app/views/shared/_stats.html.erb
@@ -1,11 +1,11 @@
 <% @user ||= current_user %>
 <div class="stats">
   <a href="<%= user_path(@user) %>">
-    <strong>
-      <%= @user.microposts.count %>
-    </strong>
-    posts
+      Uploaded <%= pluralize(@user.pictures.count, "picture") %>
   </a>
+
+<% if current_user.admin? %>
+
   <a href="<%= following_user_path(@user) %>">
     <strong id="following" class="stat">
       <%= @user.followed_users.count %>
@@ -19,3 +19,4 @@
     followers
   </a>
 </div>
+<% end %>
