--- a/app/views/users/_user.html.erb
+++ b/app/views/users/_user.html.erb
@@ -4,7 +4,9 @@
   <% if current_user?(user) %>
     | This is you.
   <% end %>
-  <
+  <% if current_user.following?(user) && current_user.admin?%>
+    | Already invited to your event.
+  <% end %>
   <% if current_user.admin? && !current_user?(user) %>
     | <%= link_to "delete", user, method: :delete, data: {confirm: "Are you sure you want to permanently delete this user?" } %>
        <% end %>
