--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -12,7 +12,7 @@
     </section>
   </aside>
   <div class="span8">
-    <%= render 'follow_form' if signed_in? %>
+    <%= render 'follow_form' if current_user.admin? || @user.id == 1%>
     <% if @user.microposts.any? %>
       <h3>Number of posts: <%= @user.microposts.count %></h3>
       <ol class="microposts">
