--- a/app/views/pictures/_picture.html.erb
+++ b/app/views/pictures/_picture.html.erb
@@ -1,13 +1,16 @@
 <section>
 <p>
 <section>
-<br>Image: <%= image_tag picture.image %>
+<div id="gallery" data-toggle="modal-gallery" data-target="#modal-gallery">
+<%= image_tag picture.image if picture.image?%>
+</div>
 </section>
 <section>
-<br>Uploaded by <%= picture.user_id %> <%=time_ago_in_words(picture.created_at) %> ago.
+<br>Uploaded by <%= User.find(picture.user_id).name %> <%=time_ago_in_words(picture.created_at) %> ago.
 <% if current_user.admin? %>
   <%= link_to "Delete", picture, :confirm => "Are you sure you want to permanently delete this picture?", :method => :delete %>
-<% end %>
 </p>
 </section>
 </section>
+<br>
+<% end %>
