got the jquery file upload working, but is not assigning event_id attribute

--- a/app/views/shared/_file_upload.html.erb
+++ b/app/views/shared/_file_upload.html.erb
@@ -1,14 +1,15 @@
-<%= form_for @picture, :html => { :multipart => true, :id => "fileupload" } do |f| %>
+<%= Event.find(params[:event_id]).title %>
+<%= form_for Picture.new, :html => { :multipart => true, :id => "fileupload" } do |f| %>
         <!-- The fileupload-buttonbar contains buttons to add/delete files and start/cancel the upload -->
         <div class="row fileupload-buttonbar">
             <div class="span7">
                 <!-- The fileinput-button span is used to style the file input field as button -->
-                <span class="btn btn-success">
+                <span class="btn btn-success fileinput-button">
                     <i class="icon-plus icon-white"></i>
-                    <span><%= t('fileupload.add_files') %></span>
+                    <span> Add Files... </span>
                     <%= f.hidden_field :event_id %>
                     <%= f.hidden_field :user_id %>
-                    <%= f.file_field :image %>
+                    <%= file_field_tag :image, :multiple => true %>
                 </span>
                 <button type="submit" class="btn btn-primary start">
                     <i class="icon-upload icon-white"></i>
