trying to figure out the routes so that event_id gets assigned properly to uploaded pictures

--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -9,7 +9,7 @@
     </section>
       <% if current_user.following_host? || current_user.admin? %>
       <section>
-        <%= link_to "Upload Pictures", new_picture_path(:event_id => @event), class: "btn btn-large btn-primary" %>
+        <%= link_to "Upload Pictures", new_picture_path, class: "btn btn-large btn-primary" %>
       <% end %>
     </section>
     <section>
