--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -6,7 +6,7 @@
           <%= link_to "2012 DDRC Family Camp", root_path, id: "logo" %>
           <ul class="nav pull-right" data-toggle="collapse" data-target=".nav-collapse">
             <li><%= link_to "Users", users_path %></li>
-            <li><%= link_to "Pictures", '#' %>
+            <li><% link_to "Pictures", '#' %>
             <li id="fat-menu" class="dropdown">
             <a href='#' class="dropdown-toggle" data-toggle="dropdown">Account</a>
               <ul class="dropdown-menu">
