--- a/app/views/events/_uploader_form.html.erb
+++ b/app/views/events/_uploader_form.html.erb
@@ -1,13 +1,12 @@
 <div id="uploader_form">
-<% unless current_user?(user) %>
-  <% if current_event.uploader?(user) %>
-    <%= render partial: 'remove_uploader' %>
-  <% else %>@user
-    <%= @user.id %>
-    <%= form_for(current_event.invitations.build(uploader_id: user.id)) do |f| %>
-      <div>user<%= user.id %><%= f.hidden_field :uploader_id %></div>
-      <%= f.submit user.id, class: "btn btn-large btn-primary" %>
+  <% if current_event.uploader?(@user) %>
+    <%= form_for(current_event.invitations.find_by_uploader_id(@user), html: {method: :delete}, remote: true) do |f| %>
+      <%= f.submit "Remove Uploader", class: "btn btn-large" %>
+    <% end %>
+  <% else %>
+    <%= form_for(current_event.invitations.build(uploader_id: @user.id)) do |f| %>
+      <div><%= f.hidden_field :uploader_id %></div>
+      <%= f.submit "Invite", class: "btn btn-large btn-primary" %>
     <% end %>
   <% end %>
   </div>
-<% end %>
