--- a/app/views/events/uploaders.html.erb
+++ b/app/views/events/uploaders.html.erb
@@ -22,7 +22,8 @@
   <li>
   <% unless current_event.host_id == user.id %>
     <%= gravatar_for user, size: 59 %>
-    <%= link_to user.name, user %>
+    <%= link_to user.name, event_user_path(@event, user) %>
+    <%= render 'uploader_form' %>
     <% if current_user.following?(user) %>
     | Already invited!
     <% else %>
