--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -12,6 +12,14 @@
     </section>
   </aside>
   <div class="span8">
+ 
+    <%= render 'events/uploader_form' %>
+    
+    These should be the same: 
+    %= @event.id %> | 
+    %= current_event.id %>
+
+
     <%= render 'follow_form' if current_user.admin? || @user.id == 1%>
     <% if @user.microposts.any? %>
       <h3>Number of posts: <%= @user.microposts.count %></h3>
