finished with functionality, now for aws and ui/ux

--- a/app/views/invitations/destroy.js.erb
+++ b/app/views/invitations/destroy.js.erb
@@ -1,2 +1,2 @@
-$("#follow_form").html("<%= escape_javascript(render('events/add_uploader')) %>")
+$("#uploader_form").html("<%= escape_javascript(render('uploaders/add_uploader')) %>")
 ("#uploaders").html('<%= @event.uploaders.count %>')
