--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -13,14 +13,7 @@
   </aside>
   <div class="span8">
  
-    <%= render 'events/uploader_form' %>
-    
-    These should be the same: 
-    %= @event.id %> | 
-    %= current_event.id %>
-
-
-    <%= render 'follow_form' if current_user.admin? || @user.id == 1%>
+    %= render 'follow_form' if current_user.admin? || @user.id == 1%>
     <% if @user.microposts.any? %>
       <h3>Number of posts: <%= @user.microposts.count %></h3>
       <ol class="microposts">
@@ -28,7 +21,7 @@
       </ol>
       <%= will_paginate @microposts %>
     <% end %>
-      <h3>Number of events hosted: <%= @user.events.count %></h3>
+      <h3>Number of events hosted: <%= @user.events_hosted.count %></h3>
       <ol class="microposts">
         <%= render @events %>
       </ol>
