cleaned up some of the ui/ux

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -3,7 +3,7 @@
     <div class="container">
       <nav>
         <% if signed_in? %>
-          <%= link_to "2012 DDRC Family Camp", root_path, id: "logo" %>
+          <%= link_to "PhotoChat (Beta)", root_path, id: "logo" %>
           <ul class="nav pull-right" data-toggle="collapse" data-target=".nav-collapse">
             <li><%= link_to "Users", users_path %></li>
             <li><% link_to "Pictures", '#' %>
