--- a/app/views/events/_event.html.erb
+++ b/app/views/events/_event.html.erb
@@ -6,7 +6,7 @@
   <span class="timestamp">
     Created <%= time_ago_in_words(event.created_at) %> ago.
   </span>
-  <% if current_user.admin? %>
+  <% if host?(event) %>
     <%= link_to "delete", event, method: :delete, data: { confirm: "Are you sure you want to permanently delete this event?" }, title: event.title %>
   <% end %>
-</li>
+</ul>
