--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -13,11 +13,16 @@
     </aside>
     <div class="span8">
     <div class="hero-unit">
-      <h2>Events you have been invited to:</h2>
-      <%= render current_user.events_attended %>
-      <h2>Events you created:</h2>
-      <%= render current_user.events_hosted %>
-   </div>  
+      <h2>Events you have been invited to:</h2><br />
+      <ul>
+        <%= render current_user.events_attended %>
+      </ul>
+      <br />
+      <h2>Events you have hosted:</h2><br />
+      <ul>
+        <%= render current_user.events_hosted %>
+      </ul>
+    </div>  
     </div>
   </div>
 <% else %>
