fixed js on invite button

--- a/app/views/events/_event.html.erb
+++ b/app/views/events/_event.html.erb
@@ -7,6 +7,6 @@
     Created <%= time_ago_in_words(event.created_at) %> ago.
   </span>
   <% if host?(event) %>
-    <%= link_to "delete", event, method: :delete, data: { confirm: "Are you sure you want to permanently delete this event?" }, title: event.title %>
+    <%= link_to "Delete", event, method: :delete, data: { confirm: "Are you sure you want to permanently delete this event?" }, title: event.title %>
   <% end %>
-</ul>
+</ul><br>
