--- a/app/views/shared/_file_upload.html.erb
+++ b/app/views/shared/_file_upload.html.erb
@@ -5,7 +5,7 @@
         <div class="row fileupload-buttonbar">
             <div class="span7">
                 <!-- The fileinput-button span is used to style the file input field as button -->
-                <span class="btn btn-primary fileinput-button">
+                <span class="btn btn-info fileinput-button">
                     <i class="icon-plus icon-white"></i>
                     <span> Add Files... </span>
                     <%= f.hidden_field :event_id %>
