--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -8,14 +8,14 @@
 
      <% if host?(@event) %>
         <section>
-          <%= link_to "Invite Your Friends To This Event!", event_uploaders_path(@event), class: "btn btn-block btn-large" %>
+          <%= link_to "Invite Your Friends To This Event!", event_uploaders_path(@event), class: "btn btn-block btn-large btn-success" %>
         </section>
       <% end %>
       
       <% if current_user.reverse_invitations.find_by_event_id(params[:id]) || host?(@event) %>
         <section>
-          <%= link_to "Upload Pictures", new_event_picture_path(@event), class: "btn btn-large btn-warning" %>
-        | <%= link_to "View All Pictures", event_pictures_path(@event), class: "btn btn-large btn-info" %>
+          <%= link_to "Upload Pictures", new_event_picture_path(@event), class: "btn btn-large btn-primary" %>
+        | <%= link_to "View All Pictures", event_pictures_path(@event), class: "btn btn-large btn-warning" %>
         </section>
       <% end %>
 
