--- a/app/views/shared/_host_event.html.erb
+++ b/app/views/shared/_host_event.html.erb
@@ -1,3 +1,5 @@
 <% if current_user?(@user)%>
+<section>
   <%= link_to "Host a new event!", new_event_path, class: "btn btn-large btn-success" %>
+</section>
 <% end %>
