--- a/app/views/uploaders/_uploader_form.html.erb
+++ b/app/views/uploaders/_uploader_form.html.erb
@@ -1,8 +1,10 @@
+<% if host?(current_event) %>
+Invite <%= @user.name %> to <%= current_event.title %>!
 <div id="uploader_form">
-<%= @user.name %>
   <% if current_event.uploader?(@user) %>
     <%= render 'remove_uploader' %>
   <% else %>
     <%= render 'add_uploader' %>
   <% end %>
   </div>
+<% end %>
