--- a/app/views/users/pictures.html.erb
+++ b/app/views/users/pictures.html.erb
@@ -24,10 +24,10 @@
 <script src="http://blueimp.github.com/JavaScript-Load-Image/load-image.min.js"></script>
 <script src="js/bootstrap-image-gallery.min.js"></script>
 
-<% if current_user.reverse_invitations.find_by_event_id(params[:event_id]) || host?(current_event) %>
+<% if current_user == @user %>
   <div class="hero-unit">
 <div id="gallery" data-toggle="modal-gallery" data-target="#modal-gallery" data-selector="div.gallery-item">
-    <%= render @pictures %>
+    <%= render current_user.pictures %>
   </div>
 <% else %>
 Sorry, you do not have permission to access these pictures.
