--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -28,9 +28,11 @@
 <% else %>
 
 <div class="hero-unit">
-<h2>Welcome to the picture website for</h2><br><h1>2012 DDRC Family Chan Camp</h1>
+<h1>Welcome to PhotoChat!</h1>
 
-<br><h2>Please take a minute to sign up!</h2>
+<h3>The easiest way to create and share group photo albums with your friends.</h3>
+
+<br><h2>PhotoChat is free, so sign up, host an event, and invite your friends!</h2>
 <br>
 <div class="row">
   <div class="span6">
