--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,57 +1,20 @@
 <% provide(:title, @user.name) %>
 <div class="row">
   <aside class="span4">
-    <section>
+
       <%= render 'shared/user_info' %>
-    </section>
 
       <%= render 'shared/host_event' %>
-    
-    <% if current_user == @user %>  
-    <section>
+
+    <% if current_user.admin? %>  
       <%= render 'shared/stats' %>
-    </section>
     <% end %>
   
   </aside>
  
   <div class="span8">
-  <% if current_user == @user %>
-  <div>
-    <a href="<%= pictures_user_path %>">
-      <h3>Uploaded <%= pluralize current_user.pictures.count, "picture" %></h3>
-    </a><br><br>
-  </div>
-
-    <% if @user.microposts.any? %>
-      <h3>Number of posts: <%= @user.microposts.count %></h3>
-      <ol class="microposts">
-        <%= render @microposts %>
-      </ol>
-      <%= will_paginate @microposts %>
-    <% end %>
-
-    <h3>Number of events you have been invited to: <%= @user.events_attended.count %></h3>
-    <ol class="microposts">
-      <li>
-        <%= render @user.events_attended %>
-      </li>
-    </ol>
-
-    <h3>Number of events you have hosted: <%= @user.events_hosted.count %></h3>
-    <ol class="microposts">
-      <li>
-          <%= render @user.events_hosted %>
-      </li>
-    </ol>
   
-  <% else %>
-  
-  <h2>Hi <%= current_user.name %>, user profiles are coming soon!<br></h2>
-  
-  <h3>You will see if <%= @user.name %> is attending any of your hosted events, or if you are attending any of <%= @user.name %>'s hosted events.</h3>
-  
-  <% end %>
+    <%= render 'shared/user_events' %>
   
   </div>
 </div>
