--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -1,4 +1,5 @@
 <%= provide(:title, @event.title ) %>
+<%= render 'shared/image_gallery' %>
 <div class="row">
   <aside class="span4">
 
@@ -19,8 +20,10 @@
 <br>
 
 <div class="hero-unit">
-  <% for picture in @event.pictures %>
-    <%= image_tag picture.image_url(:thumb) %>
+
+<div id="gallery" data-toggle="modal-gallery" data-target="#modal-gallery">
+  <% @event.pictures.each do |picture| %>
+    <a href="<%= picture.image %>" rel="gallery"><%= image_tag picture.image.thumb if picture.image? %></a>
   <% end %>
 
 </div>
