--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -1,5 +1,13 @@
+<head>
+
 <%= provide(:title, @event.title ) %>
-<%= render 'shared/image_gallery' %>
+<script src="http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.js"></script>
+<%= javascript_include_tag "galleria-1.2.8.min.js" %>
+<style>
+  #galleria{ width: 500px; height: 500px; background: #000 }
+</style>
+</head>
+
 <div class="row">
   <aside class="span4">
 
@@ -21,9 +29,10 @@
 
 <div class="hero-unit">
 
-<div id="gallery" data-toggle="modal-gallery" data-target="#modal-gallery">
-  <% @event.pictures.each do |picture| %>
-    <a href="<%= picture.image %>" rel="gallery"><%= image_tag picture.image if picture.image? %></a>
+<div id="galleria">
+
+<% @event.pictures.each do |picture| %>
+    <a href="<%= picture.image %>"><%= image_tag picture.image if picture.image? %></a>
   <% end %>
 
 </div>
@@ -34,3 +43,7 @@ Sorry <%= current_user.name %>, you need to be invited to this event to view it.
 </div>
 <% end %>
 </div>
+<script>
+  Galleria.loadTheme("<%= javascript_path('galleria.classic.js') %>");
+  Galleria.run('#galleria');
+</script>
