--- a/app/views/pictures/_picture.html.erb
+++ b/app/views/pictures/_picture.html.erb
@@ -4,9 +4,9 @@
 <%= image_tag picture.image if picture.image?%>
 </div>
 <section>
-<br>Uploaded by <%= User.find(picture.user_id).name %> <%=time_ago_in_words(picture.created_at) %> ago.
-<% if current_user.admin? %>
-  <%= link_to "Delete", event_picture_path(:event_id, picture), :confirm => "Are you sure you want to permanently delete this picture?", :method => :delete %>
+<br>Uploaded by <%= User.find(picture.user_id).name %> <%=time_ago_in_words(picture.created_at) %> ago, to <%= link_to Event.find(picture.event_id).title, Event.find(picture.event_id) %>.
+<% if current_user.id == picture.user_id %>
+  | <%= link_to "Delete", event_picture_path(:event_id, picture), :confirm => "Are you sure you want to permanently delete this picture?", :method => :delete %>
 </section>
 <% end %>
 <br><br>
