--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -218,7 +218,7 @@ aside {
 
 /* forms */
 
-input, textarea, select, .uneditable-input {
+input, textarea, input[type="text"], select, .uneditable-input {
    border: 1px solid #bbb;
    width: 100%;
    padding: 10px;
