--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -26,11 +26,11 @@
 <% else %>
 
 <div class="hero-unit">
-<h1>Welcome to PhotoChat!</h1>
+<h1>Welcome to PhotoChat</h1>
 
 <h3>The easiest way to create and share entire photo albums with your friends.</h3>
 
-<br><h2>PhotoChat is free, so sign up, host an event, and invite your friends!</h2>
+<br><h2>PhotoChat is free! So take a minute to sign up, host an event, and invite your friends!</h2>
 <br>
 <div class="row">
   <div class="span6">
