--- a/app/views/pictures/index.html.erb
+++ b/app/views/pictures/index.html.erb
@@ -1,35 +1,39 @@
 <head>
-<link rel="stylesheet" href="http://blueimp.github.com/cdn/css/bootstrap.min.css">
-<!--[if lt IE 7]><link rel="stylesheet" href="http://blueimp.github.com/cdn/css/bootstrap-ie6.min.css"><![endif]-->
-<link rel="stylesheet" href="css/bootstrap-image-gallery.min.css">
+
+<%= provide(:title, @event.title ) %>
+<script src="http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.js"></script>
+<%= javascript_include_tag "galleria-1.2.8.min.js" %>
+<style>
+  #galleria{ width: 940px; height: 940px; background: #000 }
+</style>
 </head>
 
-<!-- modal-gallery is the modal dialog used for the image gallery -->
-<div id="modal-gallery" class="modal modal-gallery hide fade">
-    <div class="modal-header">
-        <a class="close" data-dismiss="modal">&times;</a>
-        <h3 class="modal-title"></h3>
-    </div>
-    <div class="modal-body"><div class="modal-image"></div></div>
-    <div class="modal-footer">
-        <a class="btn btn-primary modal-next">Next <i class="icon-arrow-right icon-white"></i></a>
-        <a class="btn btn-info modal-prev"><i class="icon-arrow-left icon-white"></i> Previous</a>
-        <a class="btn btn-success modal-play modal-slideshow" data-slideshow="5000"><i class="icon-play icon-white"></i> Slideshow</a>
-        <a class="btn modal-download" target="_blank"><i class="icon-download"></i> Download</a>
-    </div>
-</div>
+<% if current_user.reverse_invitations.find_by_event_id(params[:id]) || current_user.reverse_invitations.find_by_event_id(params[:event_id]) || host?(@event) %>
 
-<script src="//ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
-<script src="http://blueimp.github.com/cdn/js/bootstrap.min.js"></script>
-<script src="http://blueimp.github.com/JavaScript-Load-Image/load-image.min.js"></script>
-<script src="js/bootstrap-image-gallery.min.js"></script>
+<h1><%= @event.title %></h1>
+<h2><%= @event.description %></h2><br>
+<h3>Hosted by <%= link_to User.find_by_id(@event.host_id).name, User.find_by_id(@event.host_id) %> | 
+<%= pluralize(@event.uploaders.count, "Attendee") %> | <%= pluralize(@event.pictures.count, "Picture") %></h3>
 
-<% if current_user.reverse_invitations.find_by_event_id(params[:event_id]) || host?(current_event) %>
-  <div class="hero-unit">
-<div id="gallery" data-toggle="modal-gallery" data-target="#modal-gallery" data-selector="div.gallery-item">
-    <%= render @pictures %>
-  </div>
+<%= link_to "Back", event_path(@event) %>
+<br><br>
+
+<div id="galleria">
+<% @event.pictures.each do |picture| %>
+    <a href="<%= picture.image %>"><img src="<%= picture.image.url %>" data-title="Uploaded by <%= User.find_by_id(picture.user_id).name %>"></a>
+  <% end %>
+</div><br>
+
 <% else %>
-Sorry, you do not have permission to access these pictures.
-<% end %>
+
+Sorry <%= current_user.name %>, you need to be invited to this event to view it.
+
 </div>
+<% end %>
+
+<script>
+  Galleria.loadTheme("<%= javascript_path('galleria.classic.js') %>");
+  Galleria.run('#galleria');
+
+
+</script>
