--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -1,6 +1,13 @@
-<div>
-hi
-<ol class="events">
-  <%= render @events %>
-</ol>
+<div class="hero-unit">
+      <h2>Events you have been invited to:</h2><br />
+      <ul>
+        <%= render current_user.events_attended %>
+      </ul>
+      <br />
+      <h2>Events you have hosted:</h2><br />
+      <ul>
+        <%= render current_user.events_hosted %>
+      </ul>
+    </div>  
+  </div>
 </div>
