--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -23,6 +23,7 @@
                  <li><%= link_to "Sign out", signout_path, method: "delete", id: "navbarcustomlinks" %></li>
               </ul>
             </li>
+            <li class="divider-vertical"></li>
           </ul>
 
         <% else %>
