--- a/app/views/shared/_file_upload.html.erb
+++ b/app/views/shared/_file_upload.html.erb
@@ -1,13 +1,14 @@
-<div class="containter">
+<div class="containter span7">
 <h1>Upload pictures to <%= Event.find(params[:event_id]).title %></h1><br>
 <%= form_for [@event, @picture], :html => { :multipart => true, :id => "fileupload" } do |f| %>
+<h3>We currently support .jpg .jpeg .png .gif file types.</h3><br>
 <!-- The fileupload-buttonbar contains buttons to add/delete files and start/cancel the upload -->
         <div class="row fileupload-buttonbar">
-            <div class="span7">
+          <div class="span7">
                 <!-- The fileinput-button span is used to style the file input field as button -->
                 <span class="btn btn-info btn-block btn-large fileinput-button">
                     <i class="icon-plus icon-white"></i>
-                    <span>Click to Add Files or Drag and Drop Here</span>
+                    <span>Click to Add Files or Drag and Drop</span>
                     <%= f.hidden_field :event_id %>
                     <%= f.hidden_field :user_id %>
                     <%= file_field_tag :image, :multiple => true %>
@@ -89,6 +90,7 @@
   </tr>
   {% } %}
 </script>
+
 <!-- The template to display files available for download -->
 <script id="template-download" type="text/x-tmpl">
   {% for (var i=0, file; file=o.files[i]; i++) { %}
@@ -100,10 +102,10 @@
         <td class="error" colspan="2"><span class="label label-important">{%=locale.fileupload.error%}</span> {%=locale.fileupload.errors[file.error] || file.error%}</td>
         {% } else { %}
         <td class="preview">{% if (file.thumbnail_url) { %}
-          <a href="{%=file.url%}" title="{%=file.name%}" rel="gallery" download="{%=file.name%}"><img src="{%=file.thumbnail_url%}"></a>
+          <a href="{%=file.url%}" title="{%=file.name%}" rel="gallery" target="_blank"><img src="{%=file.thumbnail_url%}"></a>
           {% } %}</td>
         <td class="name">
-          <a href="{%=file.url%}" title="{%=file.name%}" rel="{%=file.thumbnail_url&&'gallery'%}" download="{%=file.name%}">{%=file.name%}</a>
+          <a href="{%=file.url%}" title="{%=file.name%}" rel="{%=file.thumbnail_url&&'gallery'%}" target="_blank">{%=file.name%}</a>
         </td>
         <td class="size"><span>{%=o.formatFileSize(file.size)%}</span></td>
         <td colspan="2"></td>
